Tighten config processing; filter resource search to loaded namespaces